--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Simon Laux",
   "license": "GPL-3.0",
   "dependencies": {
-    "deltachat-node": "^0.39.0",
+    "deltachat-node": "^1.0.0-alpha.0",
     "irc-upd": "^0.10.0"
   }
 }
