--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "deltachat-node": "git+https://github.com/deltachat/deltachat-node.git#3592a4a826bed8d8119fd1fe354020e3f7761918",
     "fs-extra": "^8.1.0",
     "irc-upd": "^0.10.0",
+    "qrcode-terminal": "^0.12.0",
     "uuid": "^3.3.2"
   }
 }
